--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# raspi-slideshow temp files
+slideshow.jpg
+
+# Google
+credentials.json
+token.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
